--- a/app/src/main/res/layout/activity_dash.xml
+++ b/app/src/main/res/layout/activity_dash.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="phoenix.idex.DashActivity"
-    >
+    tools:context="phoenix.idex.DashActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbardash"
@@ -20,47 +19,59 @@
         android:fillViewport="true"
         android:layout_width="match_parent"
         android:layout_height="fill_parent">
-    <LinearLayout
-        android:layout_height="match_parent"
-        android:paddingBottom="5dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        >
-    <EditText
-        android:id="@+id/editTextDash"
-        android:editable="true"
-        android:background="@drawable/bg_parent_rounded_corner"
-        android:textSize="20dp"
-        android:textColor="#ffffff"
-        android:maxLength="141"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:hint="Post your idea..." />
-
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
 
-            <TextView
-            android:id="@+id/wordCounter"
-            android:text="0"
-            android:textStyle="italic"
-            android:textColor="#848482"
+            android:layout_height="match_parent"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="wrap_content"
+            android:weightSum="5"
+            >
+            <EditText
+                android:padding="15dp"
+                android:id="@+id/editTextDash"
+                android:editable="true"
+                android:background="@drawable/bg_parent_rounded_corner"
+                android:textSize="20dp"
+                android:textColor="#ffffff"
+                android:maxLength="141"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="/141"
-                android:id="@+id/txtMaxText" />
-        </LinearLayout>
+                android:layout_weight="4"
 
-    </LinearLayout>
+                android:hint="Post your idea..." />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/wordCounter"
+                    android:text="0"
+                    android:textStyle="italic"
+                    android:textColor="#848482"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/141"
+                    android:textStyle="italic"
+                    android:id="@+id/txtMaxText" />
+
+
+            </LinearLayout>
+            <Button
+                android:layout_marginTop="15dp"
+                android:text="POST IDEA"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
