--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,6 +6,7 @@
     xmlns:float="http://schemas.android.com/tools"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scrollView1"
+    android:weightSum="5"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
         <android.support.v7.widget.Toolbar
@@ -19,6 +20,8 @@
 
     <LinearLayout
         android:orientation="vertical"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="3"
         android:paddingLeft="70dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
