--- a/app/src/main/res/layout/frag_login.xml
+++ b/app/src/main/res/layout/frag_login.xml
@@ -15,7 +15,7 @@
     android:weightSum="1">
 
 
-<TextView
+    <TextView
         android:id="@+id/idexTitle"
         android:textColor="#FDD017"
         android:text="i d e x"
@@ -24,7 +24,7 @@
         android:textSize="75dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-    android:layout_marginTop="-70dp" />
+        android:layout_marginTop="-70dp" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -71,14 +71,17 @@
 
     </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
+        android:padding="15dp"
+        android:weightSum="6"
+        android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.10"
-        android:gravity="center">
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal">
 
         <Button
+            android:layout_weight="3"
             android:id="@+id/bLogin"
             android:text="Login"
             android:paddingLeft="50dp"
@@ -88,20 +91,16 @@
 
         <Button
             android:id="@+id/bRegister"
+            android:layout_weight="2"
             android:text="Register"
+
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
-    </RelativeLayout>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/text_details"
-        android:gravity="center"
-        android:layout_above="@+id/login_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
