--- a/app/src/main/res/layout/frag_graph.xml
+++ b/app/src/main/res/layout/frag_graph.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
     <com.androidplot.xy.XYPlot
         android:id="@+id/xyplot"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        title="Post Chart"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        title="Post Chart"
+        android:layout_marginTop="-5dp" />
 </LinearLayout>
