--- a/app/src/main/res/layout/activity_dash.xml
+++ b/app/src/main/res/layout/activity_dash.xml
@@ -69,7 +69,8 @@
                 android:layout_marginTop="15dp"
                 android:text="POST IDEA"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:id="@+id/bPostIdea" />
 
         </LinearLayout>
     </ScrollView>
