--- a/app/src/main/res/layout/activity_mainpost.xml
+++ b/app/src/main/res/layout/activity_mainpost.xml
@@ -6,23 +6,33 @@
     android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
+
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.swiperefreshlayouttest.MainActivity"
-        tools:ignore="MergeRootFrame" >
+        tools:ignore="MergeRootFrame">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:background="#373636"
+        android:background="#25383C"
         android:choiceMode="singleChoice"
         android:id="@+id/postRecyclerView1"
         android:layout_gravity='start'
         />
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <ProgressBar
+        android:indeterminateDrawable="@drawable/circular_progressbar"
+        android:layout_centerInParent="true"
+        android:id="@+id/progress_bar"
+        android:layout_gravity="center|top"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <android.support.design.widget.FloatingActionButton
         app:layout_behavior="phoenix.idex.RecyclerViewFeed.MainRecyclerView.listener.ScrollListener"
