--- a/app/src/main/res/layout/frag_graph.xml
+++ b/app/src/main/res/layout/frag_graph.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
     <com.androidplot.xy.XYPlot
+        androidPlot.graphWidget.marginRight="5dp"
+        androidPlot.graphWidget.marginLeft="20dp"
+        androidPlot.graphWidget.marginBottom="15dp"
         android:id="@+id/xyplot"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        title="Post Chart"
-        android:layout_marginTop="-5dp" />
+        title="Post Chart" />
 </LinearLayout>
