--- a/app/src/main/res/layout/frag_toolbar_main.xml
+++ b/app/src/main/res/layout/frag_toolbar_main.xml
@@ -14,8 +14,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/transparent"
             local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            />
+            local:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 </android.support.design.widget.CoordinatorLayout>
 
