--- a/app/src/main/res/layout/activity_tabs.xml
+++ b/app/src/main/res/layout/activity_tabs.xml
@@ -30,7 +30,7 @@
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#656363">
+                android:background="#1b1616">
             </TabWidget>
             </HorizontalScrollView>
             <FrameLayout
