--- a/app/src/main/res/layout/item_sliding_menu.xml
+++ b/app/src/main/res/layout/item_sliding_menu.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/list_item_style"
+    android:background="#1b1616"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     android:paddingLeft="10dp"
