--- a/app/src/main/res/drawable-xxhdpi/bg_parent_rounded_corner.xml
+++ b/app/src/main/res/drawable-xxhdpi/bg_parent_rounded_corner.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
 
     <!-- view background color -->
-    <solid android:color="@color/feed_item_bg" >
+    <solid android:color="#000000" >
     </solid>
 
     <!-- view border color and width -->
