--- a/app/src/main/res/layout/activity_dash.xml
+++ b/app/src/main/res/layout/activity_dash.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="phoenix.idex.DashActivity">
+    tools:context=".Activities.DashActivity"
+    android:background="#1a1313">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbardash"
@@ -40,9 +41,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
-
                 android:hint="Post your idea..." />
-
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
