--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -2,12 +2,12 @@
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:float="http://schemas.android.com/tools"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scrollView1"
-    android:weightSum="5"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#110202">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarEditProfile"
@@ -17,6 +17,7 @@
         local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         />
+
     <ImageView
         android:id="@+id/ivProfilePic"
         android:layout_gravity="center_horizontal"
@@ -26,10 +27,9 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_gravity="center_vertical"
-        android:layout_weight="3"
         android:paddingLeft="70dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
 
         <com.wrapp.floatlabelededittext.FloatLabeledEditText
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:ems="10"
-                android:id="@+id/etEdit_Email"
+                android:id="@+id/etChangeEmail"
                 android:hint="Email Address"
                 android:paddingBottom="10dp" />
         </com.wrapp.floatlabelededittext.FloatLabeledEditText>
@@ -85,16 +85,17 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:id="@+id/etEdit_Username"
+                android:id="@+id/etChangeUsername"
                 android:hint="Username"
                 android:paddingBottom="10dp" />
         </com.wrapp.floatlabelededittext.FloatLabeledEditText>
+
     </LinearLayout>
     <LinearLayout
         android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
