--- a/app/src/main/res/layout/frag_about.xml
+++ b/app/src/main/res/layout/frag_about.xml
@@ -3,7 +3,8 @@
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#1b1616">
 
 
     <android.support.v7.widget.Toolbar
