--- a/app/src/main/res/layout/frag_login.xml
+++ b/app/src/main/res/layout/frag_login.xml
@@ -1,36 +1,15 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:background="@drawable/dark"
-    android:layout_gravity="center_vertical"
-    android:gravity="center|left"
-    android:id="@+id/fragmentLogin"
-    tools:context=".LoginActivityFragment"
-    android:weightSum="1">
+<?xml version="1.0" encoding="utf-8"?>
 
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="@drawable/dark"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tvIdexTitle"
-            android:textColor="#FDD017"
-            android:text="q i x"
-            android:textStyle="bold|italic"
-            android:textSize="69sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <LinearLayout
         android:orientation="vertical"
@@ -38,6 +17,18 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp">
+
+        <TextView
+            android:id="@+id/tvIdexTitle"
+            android:textColor="#FDD017"
+            android:text="@string/app_name"
+            android:textStyle="bold|italic"
+            android:textSize="60sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="40dp" />
 
         <TextView
             android:text="Username"
@@ -48,6 +39,7 @@
             android:id="@+id/tvUsername" />
 
         <EditText
+            android:singleLine="true"
             android:id="@+id/etUsername"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
@@ -62,27 +54,19 @@
             android:id="@+id/tvPassword" />
 
         <EditText
+            android:singleLine="true"
             android:id="@+id/etPassword"
             android:password="true"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
 
     </LinearLayout>
 
     <LinearLayout
         android:padding="15dp"
         android:weightSum="6"
-        android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -148,16 +132,5 @@
         android:textSize="17sp"
         android:typeface="sans"
         android:textColor="#8ccfcccc" />
-
-    <Button
-        android:id="@+id/bBrowseIdea"
-        android:textColor="#FFFF00"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:layout_gravity="center_horizontal"
-        android:text="Browse Idea"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
-
-</LinearLayout>
+    </LinearLayout>
+    </ScrollView>
